<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.NameActivity">

    <TextView
        android:id="@+id/labelQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="?actionBarSize"
        android:layout_marginLeft="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_name"
        android:layout_below="@id/labelQ"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
    <LinearLayout
        android:id="@+id/layoutQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_centerInParent="true">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:cornerRadius="30dp"
        android:enabled="false"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:id="@+id/btEnter" />

</RelativeLayout>